--- a/data/cards/10804018.yaml
+++ b/data/cards/10804018.yaml
@@ -1,7 +1,7 @@
 konami_id: 19875
 password: 10804018
 name:
-  en: Saffira, Dragon Deity of the Voiceless Voice
+  en: Saffira, Divine Dragon of the Voiceless Voice
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 肃声龙神 萨菲拉
 text:
   en: |-
-    You can Ritual Summon this card with "Blessing of the Voiceless Voice". If this card is Ritual Summoned and you have "Lo, the Prayers of the Voiceless Voice" on your field or GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Ritual Monster (Warrior or Dragon): You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, Dragon Deity of the Voiceless Voice" once per turn.
+    You can Ritual Summon this card with "Blessing of the Voiceless Voice". If this card is Ritual Summoned while you have "Lo, the Prayers of the Voiceless Voice" on your field or in your GY: You can draw 2 cards, then discard 1 card. When an attack is declared involving a LIGHT Ritual Monster (Warrior or Dragon): You can discard 1 random card from your opponent's hand. During your opponent's End Phase: You can add 1 LIGHT monster from your GY to your hand. You can only use each effect of "Saffira, Divine Dragon of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ series:
 - Voiceless Voice
 images:
 - index: 1
-  image: SaffiraDragonDeityoftheVoicelessVoice-LEDE-JP-R.png
+  image: SaffiraDivineDragonoftheVoicelessVoice-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP034
@@ -57,9 +57,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1034528
