--- a/data/cards/18843291.yaml
+++ b/data/cards/18843291.yaml
@@ -1,7 +1,7 @@
 konami_id: 19884
 password: 18843291
 name:
-  en: Minerva, Lightsworn Athena
+  en: Minerva, the Athenian Lightsworn
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    "Lightsworn" monsters you control cannot be banished by card effects. You can only use each of the following effects of "Minerva, Lightsworn Athena" once per turn. If this card is Synchro Summoned: You can send "Lightsworn" monsters with different Types from your Deck to the GY, up to the number of "Lightsworn" monsters used as material for this card's Summon. You can banish up to 4 "Lightsworn" monsters from your GY; send that many cards from the top of your Deck to the GY.
+    "Lightsworn" monsters you control cannot be banished by card effects. You can only use each of the following effects of "Minerva, the Athenian Lightsworn" once per turn. If this card is Synchro Summoned: You can send "Lightsworn" monsters with different Types from your Deck to the GY, up to the number of "Lightsworn" monsters used as this card's material. You can banish up to 4 "Lightsworn" monsters from your GY; send that many cards from the top of your Deck to the GY.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ series:
 - Lightsworn
 images:
 - index: 1
-  image: MinervaLightswornAthena-LEDE-JP-UR.png
+  image: MinervatheAthenianLightsworn-LEDE-JP-UR.png
 sets:
   ja:
   - set_number: LEDE-JP043
@@ -75,9 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1035125
