--- a/data/cards/26334139.yaml
+++ b/data/cards/26334139.yaml
@@ -1,7 +1,7 @@
 konami_id: 19915
 password: 26334139
 name:
-  en: Sinful Spoils Cycle
+  en: Sinful Spoils Subdual
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 峰回罪宝
 text:
   en: |-
-    Take 1 Level 5 or higher Illusion monster from your Deck, and either add it to your hand or Special Summon it. If Summoned this way, you cannot activate its effects during the Main Phase this turn. You can banish this card from your GY, then target 1 face-down card you control; return it to the hand, then you can Set 1 Spell/Trap from your hand. You can only use each effect of "Sinful Spoils Cycle" once per turn.
+    Take 1 Level 5 or higher Illusion monster from your Deck and either add it to your hand or Special Summon it, but if you Special Summon it with this effect, you cannot activate its effects during the Main Phase this turn. You can banish this card from your GY, then target 1 face-down card you control; return it to the hand, then you can Set 1 Spell/Trap from your hand. You can only use 1 "Sinful Spoils Subdual" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Sinful Spoils
 images:
 - index: 1
-  image: SinfulSpoilsCycle-LEDE-JP-R.png
+  image: SinfulSpoilsSubdual-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP074
@@ -50,9 +50,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037901
