--- a/data/cards/39931513.yaml
+++ b/data/cards/39931513.yaml
@@ -1,7 +1,7 @@
 konami_id: 19857
 password: 39931513
 name:
-  en: Tenpai Dragon Baidora
+  en: Tenpai Dragon Paidra
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 天杯龙 白板龙
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can take 1 "Sangen" Spell/Trap from your Deck, and either add it to your hand or Set it. You can only use this effect of "Tenpai Dragon Baidora" once per turn. You take no battle damage from battles involving your FIRE Dragon monsters. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
+    If this card is Normal or Special Summoned: You can take 1 "Sangen" Spell/Trap from your Deck, and either add it to your hand or Set it. You can only use this effect of "Tenpai Dragon Paidra" once per turn. You take no battle damage from battles involving your FIRE Dragon monsters. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Tenpai Dragon
 images:
 - index: 1
-  image: TenpaiDragonBaidora-LEDE-JP-SR.png
+  image: TenpaiDragonPaidra-LEDE-JP-SR.png
 sets:
   ja:
   - set_number: LEDE-JP016
@@ -70,8 +70,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1034230
