--- a/data/cards/53329234.yaml
+++ b/data/cards/53329234.yaml
@@ -1,7 +1,7 @@
 konami_id: 19916
 password: 53329234
 name:
-  en: Sinful Spoils of Dozing - Morrighan
+  en: Sinful Spoils of Slumber - Morrian
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 微睡之罪宝－摩莉安
 text:
   en: |-
-    Target 1 face-up Special Summoned monster on the field; change it to face-down Defense Position. If you control a Level 5 or higher Illusion monster and this card is in your GY: You can Set this card, but banish it when it leaves the field. You can only use 1 "Sinful Spoils of Dozing - Morrighan" effect per turn, and only once that turn.
+    Target 1 face-up Special Summoned monster on the field; change it to face-down Defense Position. If you control a Level 5 or higher Illusion monster, while this card is in your GY: You can Set this card, but banish it when it leaves the field. You can only use 1 "Sinful Spoils of Slumber - Morrian" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ series:
 - Sinful Spoils
 images:
 - index: 1
-  image: SinfulSpoilsofDozingMorrighan-LEDE-JP-C.png
+  image: SinfulSpoilsofSlumberMorrian-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP075
@@ -50,9 +50,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037902
