--- a/data/cards/53765052.yaml
+++ b/data/cards/53765052.yaml
@@ -1,7 +1,7 @@
 konami_id: 19853
 password: 53765052
 name:
-  en: Diabellze of the Original Sin
+  en: Diabellze the Original Sinkeeper
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 原罪的迪亚贝尔赛
 text:
   en: |-
-    If a "Sinful Spoils" card is in either GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze of the Original Sin" once per turn this way. Your opponent cannot activate Spell/Trap Cards that were not Set. If either player Sets a Spell/Trap(s) to the field while this monster is on the field (except during the Damage Step): You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze of the Original Sin" once per turn.
+    If a "Sinful Spoils" card is in either player's GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze the Original Sinkeeper" once per turn this way. Your opponent must Set Spell/Trap Cards before activating them. If a Spell/Trap becomes Set on the field, while this card is in the Monster Zone (except during the Damage Step): You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze the Original Sinkeeper" once per turn.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ atk: 2500
 def: 2000
 images:
 - index: 1
-  image: DiabellzeoftheOriginalSin-LEDE-JP-UR.png
+  image: DiabellzetheOriginalSinkeeper-LEDE-JP-UR.png
 sets:
   ja:
   - set_number: LEDE-JP012
@@ -69,9 +69,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037900
