--- a/data/cards/59481082.yaml
+++ b/data/cards/59481082.yaml
@@ -1,7 +1,7 @@
 konami_id: 19864
 password: 59481082
 name:
-  en: Dragon of Lightsworn
+  en: Lightsworn Dragonling
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 光道之龙
 text:
   en: |-
-    If you have a "Lightsworn" monster in your GY: You can Special Summon this card from your hand. If this card is Special Summoned: You can send 1 "Lightsworn" card from your Deck to the GY, except "Dragon of Lightsworn". If this card is sent to the GY: You can add 1 Dragon monster with 3000 ATK/2600 DEF from your Deck to your hand. You can only use each effect of "Dragon of Lightsworn" once per turn.
+    If you have a "Lightsworn" monster in your GY: You can Special Summon this card from your hand. If this card is Special Summoned: You can send 1 "Lightsworn" card from your Deck to the GY, except "Lightsworn Dragonling". If this card is sent to the GY: You can add 1 Dragon monster with 3000 ATK/2600 DEF from your Deck to your hand. You can only use each effect of "Lightsworn Dragonling" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Lightsworn
 images:
 - index: 1
-  image: DragonofLightsworn-LEDE-JP-C.png
+  image: LightswornDragonling-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP023
@@ -62,9 +62,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1035106
