--- a/data/cards/91810826.yaml
+++ b/data/cards/91810826.yaml
@@ -1,7 +1,7 @@
 konami_id: 19859
 password: 91810826
 name:
-  en: Tenpai Dragon Zhongdora
+  en: Tenpai Dragon Chundra
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 天杯龙 红中龙
 text:
   en: |-
-    Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control. You can only use each of the following effects of "Tenpai Dragon Zhongdora" once per turn. If you control a FIRE Dragon monster: You can Special Summon this card from your hand. At the start of the Damage Step, if a monster battles: You can Special Summon 1 Level 4 or lower FIRE Dragon monster from your Deck, except "Tenpai Dragon Zhongdora".
+    Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control. You can only use each of the following effects of "Tenpai Dragon Chundra" once per turn. If you control a FIRE Dragon monster: You can Special Summon this card from your hand. At the start of the Damage Step, if a monster battles: You can Special Summon 1 Level 4 or lower FIRE Dragon monster from your Deck, except "Tenpai Dragon Chundra".
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Tenpai Dragon
 images:
 - index: 1
-  image: TenpaiDragonZhongdora-LEDE-JP-C.png
+  image: TenpaiDragonChundra-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP018
@@ -56,8 +56,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1034232
