--- a/data/cards/45464587.yaml
+++ b/data/cards/45464587.yaml
@@ -1,7 +1,7 @@
 konami_id: 19882
 password: 45464587
 name:
-  en: Gold Pride - Annihilator
+  en: Gold Pride - Eradicator
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    During your opponent's turn (Quick Effect): You can target 1 Fusion, Synchro, Xyz, or Link Monster on the field, or up to 2 instead if your LP are lower than your opponent's; destroy them. You can only use this effect of "Gold Pride - Annihilator" once per turn. Once per turn, during the End Phase, if the previous effect was activated this turn: Return this card to the Extra Deck, and if you do, Special Summon 1 "Gold Pride - Assassinator" from your Deck or GY.
+    During your opponent's turn (Quick Effect): You can target 1 Fusion, Synchro, Xyz, or Link Monster on the field, or if your LP are lower than your opponent's, you can target 2; destroy them. You can only use this effect of "Gold Pride - Eradicator" once per turn. Once per turn, during the End Phase, if the previous effect was activated this turn: Return this card to the Extra Deck, and if you do, Special Summon 1 "Gold Pride - Eliminator" from your Deck or GY.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ series:
 - Gold Pride
 images:
 - index: 1
-  image: GoldPrideAnnihilator-LEDE-JP-SR.png
+  image: GoldPrideEradicator-LEDE-JP-SR.png
 sets:
   ja:
   - set_number: LEDE-JP041
@@ -70,9 +70,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037810
