--- a/data/cards/71858682.yaml
+++ b/data/cards/71858682.yaml
@@ -1,7 +1,7 @@
 konami_id: 19883
 password: 71858682
 name:
-  en: Centur-Ion Arkcoela
+  en: Centur-Ion Auxila
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    Face-up cards in your Spell & Trap Zone cannot be destroyed by card effects. You can only use each of the following effects of "Centur-Ion Arkcoela" once per turn. If this card is Special Summoned: You can add 1 "Centur-Ion" card from your Deck to your hand. During the End Phase: You can place 1 non-Synchro "Centur-Ion" monster from your GY or banishment face-up in your Spell & Trap Zone as a Continuous Trap.
+    Face-up cards in your Spell & Trap Zone cannot be destroyed by card effects. You can only use each of the following effects of "Centur-Ion Auxila" once per turn. If this card is Special Summoned: You can add 1 "Centur-Ion" card from your Deck to your hand. During the End Phase: You can place 1 of your non-Synchro "Centur-Ion" monsters that is banished or in your GY, in your Spell & Trap Zone as a face-up Continuous Trap.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ series:
 - Centur-Ion
 images:
 - index: 1
-  image: CenturIonArkcoela-LEDE-JP-SR.png
+  image: CenturIonAuxila-LEDE-JP-SR.png
 sets:
   ja:
   - set_number: LEDE-JP042
@@ -74,9 +74,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1040267
