--- a/data/cards/82570174.yaml
+++ b/data/cards/82570174.yaml
@@ -1,7 +1,7 @@
 konami_id: 19880
 password: 82570174
 name:
-  en: Sangen Risedragon Bident Dragion
+  en: Sangenpai Bident Dragion
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dragon Tuner + 1+ non-Tuner Dragon monsters
-    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Dragon monsters. You can only use this effect of "Sangen Risedragon Bident Dragion" once per turn. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Sangen Risedragon Bident Dragion" once per Duel.
+    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Dragon monsters. You can only use this effect of "Sangenpai Bident Dragion" once per turn. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Sangenpai Bident Dragion" once per Duel.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ series:
 - Sangen
 images:
 - index: 1
-  image: SangenRisedragonBidentDragion-LEDE-JP-R.png
+  image: SangenpaiBidentDragion-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP039
@@ -59,8 +59,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1034233
