--- a/data/cards/90946420.yaml
+++ b/data/cards/90946420.yaml
@@ -1,7 +1,7 @@
 konami_id: 19914
 password: 90946420
 name:
-  en: Goblin Biker Pile-Up
+  en: Goblin Biker Grand Pileup
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林百罗刹大重叠
 text:
   en: |-
-    Target 1 Xyz Monster you control; Special Summon 1 "Goblin" Xyz Monster from your Extra Deck, by using that monster you control as material, and if you do, attach this card to it as additional material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target 1 "Goblin" Xyz Monster you control and 1 card in either GY; attach that card from the GY to that monster on the field as material. You can only use each effect of "Goblin Biker Pile-Up" once per turn.
+    Target 1 Xyz Monster you control; Special Summon 1 "Goblin" Xyz Monster from your Extra Deck, by using that target as material, and if you do, attach this card to it as material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target 1 "Goblin" Xyz Monster you control and 1 card in either GY; attach the targeted card from the GY to that monster on the field as material. You can only use each effect of "Goblin Biker Grand Pileup" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Goblin Biker
 images:
 - index: 1
-  image: GoblinBikerPileUp-LEDE-JP-C.png
+  image: GoblinBikerGrandPileup-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP073
@@ -51,9 +51,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037786
