--- a/data/cards/04841383.yaml
+++ b/data/cards/04841383.yaml
@@ -1,7 +1,7 @@
 konami_id: 19899
 password: 4841383
 name:
-  en: Raika Ryouran Kuruizaki
+  en: Ragnaraika Bloom
   de:
   es:
   fr:
@@ -15,10 +15,10 @@ name:
   zh-CN: 蕾祸缭乱狂绽
 text:
   en: |-
-    All Insect, Plant, and Reptile monsters on the field gain 300 ATK/DEF, also all other monsters on the field lose 300 ATK/DEF. You can activate 1 of these effects;
-    ● Add 1 "Raika" monster from your Deck to your hand, then discard 1 card.
-    ● Special Summon 1 "Raika" monster from your hand, GY, or banishment in Defense Position.
-    You can only use this effect of "Raika Ryouran Kuruizaki" once per turn.
+    Insect, Plant, and Reptile monsters on the field gain 300 ATK/DEF, also all other monsters on the field lose 300 ATK/DEF. During your Main Phase: You can activate 1 of these effects;
+    ● Add 1 "Ragnaraika" monster from your Deck to your hand, then discard 1 card.
+    ● Special Summon 1 of your "Ragnaraika" monsters from your hand, GY, or banishment, in Defense Position.
+    You can only use this effect of "Ragnaraika Bloom" once per turn.
   de:
   es:
   fr:
@@ -39,10 +39,10 @@ text:
 card_type: Spell
 property: Continuous
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikaRyouranKuruizaki-LEDE-JP-C.png
+  image: RagnaraikaBloom-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP058
@@ -57,9 +57,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037602
