--- a/data/cards/06908161.yaml
+++ b/data/cards/06908161.yaml
@@ -1,7 +1,7 @@
 konami_id: 19890
 password: 6908161
 name:
-  en: Raika no Kusarigami
+  en: Ragnaraika Chain Coils
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ monsters, including an Insect, Plant, or Reptile monster
-    If your opponent activates a monster effect: You can activate this effect; neither player can activate monsters effects in the hand for the rest of this turn. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Kusarigami" once per turn.
+    If your opponent activates a monster effect  (except during the Damage Step): You can activate this effect; neither player can activate the effects of monsters in the hand this turn. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon for the rest of this turn, except Insect, Plant, or Reptile monsters. You can only use each effect of "Ragnaraika Chain Coils" once per turn.
   de:
   es:
   fr:
@@ -43,10 +43,10 @@ link_arrows:
 atk: 2900
 materials: 2+ monsters, including an Insect, Plant, or Reptile monster
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikanoKusarigami-LEDE-JP-SR.png
+  image: RagnaraikaChainCoils-LEDE-JP-SR.png
 sets:
   ja:
   - set_number: LEDE-JP049
@@ -75,9 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037593
