--- a/data/cards/18969888.yaml
+++ b/data/cards/18969888.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>超<rt>ちょう</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>トランセンド・ドラギオン
-  ja_romaji: Sangenchōryū Toransendo Doragion
+  ja_romaji: Sangen Chōryū Toransendo Doragion
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dragon Tuner + 1+ non-Tuner Dragon monsters
-    If this card is Synchro Summoned: You can change all monsters on the field to Attack Position. All your opponent's monsters must attack, if able, also your opponent cannot activate cards or effects during the Battle Phase. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 card on the field. You can only use this effect of "Sangenpai Transcendent Dragion" once per Duel.
+    All monsters your opponent controls must attack, if able. Your opponent cannot activate cards or effects during the Battle Phase. If this card is Synchro Summoned: You can change all monsters on the field to Attack Position. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 card on the field. You can only use this effect of "Sangenpai Transcendent Dragion" once per Duel.
   de:
   es:
   fr:
@@ -75,7 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1034234
