--- a/data/cards/30336082.yaml
+++ b/data/cards/30336082.yaml
@@ -1,7 +1,7 @@
 konami_id: 19900
 password: 30336082
 name:
-  en: Brimming Sangen Manor
+  en: Sangen Summoning
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 杯满之灿幻庄
 text:
   en: |-
-    FIRE Dragon monsters you control are unaffected by your opponent's activated effects during your Main Phase 1 only. During your Main Phase: You can add 1 "Tenpai Dragon" monster from your Deck to your hand, then discard 1 card. You can only use this effect of "Brimming Sangen Manor" once per turn. If this card is destroyed during the Battle Phase: You can target 1 Dragon Synchro Monster you control; its ATK becomes doubled.
+    During your Main Phase 1, FIRE Dragon monsters you control are unaffected by your opponent's activated effects. During your Main Phase: You can add 1 "Tenpai Dragon" monster from your Deck to your hand, then discard 1 card. You can only use this effect of "Sangen Summoning" once per turn. If this card is destroyed during the Battle Phase: You can target 1 Dragon Synchro Monster you control; double its ATK.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Sangen
 images:
 - index: 1
-  image: BrimmingSangenManor-LEDE-JP-R.png
+  image: SangenSummoning-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP059
@@ -51,9 +51,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1034235
