--- a/data/cards/42307760.yaml
+++ b/data/cards/42307760.yaml
@@ -1,7 +1,7 @@
 konami_id: 19891
 password: 42307760
 name:
-  en: Raika no Daiouga
+  en: Ragnaraika Stag Sovereign
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Insect, Plant, and/or Reptile monsters
-    If a monster(s) is Special Summoned from your opponent's Deck and/or Extra Deck (except during the Damage Step): You can destroy 2 monsters on the field. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Daiouga" once per turn.
+    If a monster(s) is Special Summoned from your opponent's Deck and/or Extra Deck (except during the Damage Step): You can destroy 2 monsters on the field. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon for the rest of this turn, except Insect, Plant, or Reptile monsters. You can only use each effect of "Ragnaraika Stag Sovereign" once per turn.
   de:
   es:
   fr:
@@ -44,10 +44,10 @@ link_arrows:
 atk: 3300
 materials: 2+ monsters, including an Insect, Plant, or Reptile monster
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikanoDaiouga-LEDE-JP-UR.png
+  image: RagnaraikaStagSovereign-LEDE-JP-UR.png
 sets:
   ja:
   - set_number: LEDE-JP050
@@ -78,9 +78,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037600
