--- a/data/cards/70514456.yaml
+++ b/data/cards/70514456.yaml
@@ -1,7 +1,7 @@
 konami_id: 19889
 password: 70514456
 name:
-  en: Raika no Oogaminushi
+  en: Ragnaraika Mantis Monk
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ monsters, including an Insect, Plant, or Reptile monster
-    You can banish 2 Insect, Plant, and/or Reptile monsters from your GY; add 1 "Raika" Trap from your Deck to your hand. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Oogaminushi" once per turn.
+    You can banish 2 Insect, Plant, and/or Reptile monsters from your GY; add 1 "Ragnaraika" Trap from your Deck to your hand. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon for the rest of this turn, except Insect, Plant, or Reptile monsters. You can only use each effect of "Ragnaraika Mantis Monk" once per turn.
   de:
   es:
   fr:
@@ -42,10 +42,10 @@ link_arrows:
 atk: 2300
 materials: 2+ monsters, including an Insect, Plant, or Reptile monster
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikanoOogaminushi-LEDE-JP-C.png
+  image: RagnaraikaMantisMonk-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP048
@@ -60,9 +60,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037591
