--- a/data/cards/78679226.yaml
+++ b/data/cards/78679226.yaml
@@ -1,7 +1,7 @@
 konami_id: 19895
 password: 78679226
 name:
-  en: Silence Towards the Future
+  en: Future Silence
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 向未来的沉默
 text:
   en: |-
-    Add 1 monster from your Deck to your hand that mentions "Shining Sarcophagus", then, if you activated this card during the Battle Phase while you controlled "Shining Sarcophagus" and a monster that mentions it, each player draws cards until they have 6 cards in their hand. You can only activate 1 "Silence Towards the Future" per turn.
+    Add 1 monster that mentions "Shining Sarcophagus" from your Deck to your hand, then, if you activated this card during the Battle Phase while you controlled "Shining Sarcophagus" and a monster that mentions it, each player draws until they have 6 cards in their hand. You can only activate 1 "Future Silence" per turn.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ series:
 - Shining Sarcophagus
 images:
 - index: 1
-  image: SilenceTowardstheFuture-LEDE-JP-R.png
+  image: FutureSilence-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP054
@@ -56,9 +56,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1026266
