--- a/data/cards/92110878.yaml
+++ b/data/cards/92110878.yaml
@@ -1,7 +1,7 @@
 konami_id: 19845
 password: 92110878
 name:
-  en: Tricolore Gadget
+  en: Gadget Trio
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 三色小工具
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Shining Sarcophagus", or 1 Spell/Trap that mentions it, from your Deck to your hand. If this card is destroyed by battle or card effect: You can Set 1 "Stronghold the Hidden Fortress" directly from your Deck. You can only use each effect of "Tricolore Gadget" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Shining Sarcophagus" or 1 Spell/Trap that mentions it from your Deck to your hand. If this card is destroyed by battle or card effect: You can Set 1 "Stronghold the Hidden Fortress" from your Deck. You can only use each effect of "Gadget Trio" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Shining Sarcophagus
 images:
 - index: 1
-  image: TricoloreGadget-LEDE-JP-R.png
+  image: GadgetTrio-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP004
@@ -55,9 +55,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1026262
