--- a/data/cards/99153051.yaml
+++ b/data/cards/99153051.yaml
@@ -1,7 +1,7 @@
 konami_id: 19854
 password: 99153051
 name:
-  en: Raika no Marikoube
+  en: Ragnaraika the Evil Seed
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 蕾祸之毬首
 text:
   en: |-
-    You can Special Summon this card (from your hand) by sending 1 Insect, Plant, or Reptile monster from your hand to the GY. You can only Special Summon "Raika no Marikoube" once per turn this way. If this card is Normal or Special Summoned: You can add up to 2 "Raika" cards with different names from your Deck and/or banishment to your hand, except "Raika no Marikoube", then banish 1 card from your hand, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use this effect of "Raika no Marikoube" once per turn.
+    You can Special Summon this card (from your hand) by sending 1 Insect, Plant, or Reptile monster from your hand to the GY. You can only Special Summon "Ragnaraika the Evil Seed" once per turn this way. If this card is Normal or Special Summoned: You can add to your hand up to 2 different "Ragnaraika" cards of yours that are banished and/or in your Deck, except "Ragnaraika the Evil Seed", then banish 1 card from your hand, also you cannot Special Summon for the rest of this turn, except Insect, Plant, or Reptile monsters. You can only use this effect of "Ragnaraika the Evil Seed" once per turn.
   de:
   es:
   fr:
@@ -36,10 +36,10 @@ level: 1
 atk: 0
 def: 0
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikanoMarikoube-LEDE-JP-R.png
+  image: RagnaraikatheEvilSeed-LEDE-JP-R.png
 sets:
   ja:
   - set_number: LEDE-JP013
@@ -61,9 +61,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037581
