--- a/data/cards/yugipedia1052844.yaml
+++ b/data/cards/yugipedia1052844.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Insect, Plant, and/or Reptile monsters
-    You can banish up to 2 monsters from your GY, then target that many Spells/Traps your opponent controls; destroy them. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Kurokamitsuki" once per turn.
+    You can banish up to 2 monsters from your GY, then target that many Spells/Traps your opponent controls; destroy them. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon for the rest of this turn, except Insect, Plant, or Reptile monsters. You can only use each effect of "Raika no Kurokamitsuki" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ atk: 2600
 def: 0
 materials: 2+ Insect, Plant, and/or Reptile monsters
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
   image: RaikanoKurokamitsuki-INFO-JP-OP.png
