--- a/data/cards/02333466.yaml
+++ b/data/cards/02333466.yaml
@@ -1,7 +1,7 @@
 konami_id: 19842
 password: 2333466
 name:
-  en: Geas Gandora the Dragon of Destruction
+  en: Gandora-G the Dragon of Destruction
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 破坏龙 钢多拉G
 text:
   en: |-
-    Gains 300 ATK for each banished card. You can only use each of the following effects of "Geas Gandora the Dragon of Destruction" once per turn. If you control "Shining Sarcophagus": You can Special Summon this card from your hand. You can pay half your LP; destroy as many other cards on the field as possible, and if you do, banish them, then Special Summon 1 Level 7 or lower monster from your Deck that mentions "Shining Sarcophagus", and if you do, increase its Level by the number of cards destroyed by this effect.
+    Gains 300 ATK for each banished card. You can only use each of the following effects of "Gandora-G the Dragon of Destruction" once per turn. If you control "Shining Sarcophagus": You can Special Summon this card from your hand. You can pay half your LP; destroy as many other cards on the field as possible, and if you do, banish them, then Special Summon 1 Level 7 or lower monster that mentions "Shining Sarcophagus" from your Deck, and increase its Level by the number of cards destroyed by this effect.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ series:
 - Shining Sarcophagus
 images:
 - index: 1
-  image: GeasGandoratheDragonofDestruction-LEDE-JP-UR.png
+  image: GandoraGtheDragonofDestruction-LEDE-JP-UR.png
 sets:
   ja:
   - set_number: LEDE-JP001
@@ -73,9 +73,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1026257
