--- a/data/cards/26548709.yaml
+++ b/data/cards/26548709.yaml
@@ -1,7 +1,7 @@
 konami_id: 19855
 password: 26548709
 name:
-  en: Raika no Yahazu Kamikiri
+  en: Ragnaraika Samurai Beetle
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 蕾祸之矢筈天牛
 text:
   en: |-
-    You can Special Summon this card (from your hand) by placing 1 of your banished Insect, Plant, or Reptile monsters on the bottom of the Main Deck. You can only Special Summon "Raika no Yahazu Kamikiri" once per turn this way. If this card is sent to the GY as material for the Link Summon of a "Raika" monster: You can target 1 Level 4 or lower Insect, Plant, or Reptile monster in your GY, except "Raika no Yahazu Kamikiri"; Special Summon it in Defense Position. You can only use this effect of "Raika no Yahazu Kamikiri" once per turn.
+    You can Special Summon this card (from your hand) by placing 1 of your banished Insect, Plant, or Reptile monsters on the bottom of your Main Deck. You can only Special Summon "Ragnaraika Samurai Beetle" once per turn this way. If this card is sent to the GY as material for a "Ragnaraika" Link Monster: You can target 1 Level 4 or lower Insect, Plant, or Reptile monster in your GY, except "Ragnaraika Samurai Beetle"; Special Summon it in Defense Position. You can only use this effect of "Ragnaraika Samurai Beetle" once per turn.
   de:
   es:
   fr:
@@ -36,10 +36,10 @@ level: 3
 atk: 1500
 def: 0
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
-  image: RaikanoYahazuKamikiri-LEDE-JP-C.png
+  image: RagnaraikaSamuraiBeetle-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP014
@@ -54,9 +54,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037582
