--- a/data/cards/38505587.yaml
+++ b/data/cards/38505587.yaml
@@ -1,7 +1,7 @@
 konami_id: 19846
 password: 38505587
 name:
-  en: Mashimarshmallon
+  en: Moremarshmallon
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 棉棉花糖
 text:
   en: |-
-    While you control "Shining Sarcophagus", this card cannot be destroyed by battle, also your opponent's monsters cannot target other monsters for attacks. You can only use each of the following effects of "Mashimarshmallon" once per turn. During your opponent's turn, if you control "Shining Sarcophagus" (Quick Effect): You can Special Summon this card from your hand. If this card is destroyed by card effect: You can Special Summon 1 "Mashimarshmallon" from your hand, Deck, GY, or banishment, and if you do, inflict 1000 damage to your opponent.
+    While you control "Shining Sarcophagus", this card cannot be destroyed by battle, also your opponent's monsters cannot target monsters for attacks, except this one. You can only use each of the following effects of "Moremarshmallon" once per turn. During your opponent's turn, if you control "Shining Sarcophagus" (Quick Effect): You can Special Summon this card from your hand. If this card is destroyed by card effect: You can Special Summon 1 "Moremarshmallon" from your hand, Deck, GY, or banishment, except this card, and if you do, inflict 1000 damage to your opponent.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Shining Sarcophagus
 images:
 - index: 1
-  image: Mashimarshmallon-LEDE-JP-C.png
+  image: Moremarshmallon-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP005
@@ -55,9 +55,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1026264
