--- a/data/cards/65326118.yaml
+++ b/data/cards/65326118.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 天杯龙 绿发龙
 text:
   en: |-
-    If this card is Normal or Special Summoned, OR, at the start of the Damage Step, if a monster battles: You can target 1 Level 4 or lower FIRE Dragon monster in your GY; Special Summon it. You can only use this effect of "Tenpai Dragon Fadra" once per turn. Your FIRE Dragon monsters cannot be destroyed by battle. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
+    If this card is Normal or Special Summoned, or at the start of the Damage Step, if a monster battles: You can target 1 Level 4 or lower FIRE Dragon monster in your GY; Special Summon it. You can only use this effect of "Tenpai Dragon Fadra" once per turn. Your FIRE Dragon monsters cannot be destroyed by battle. Once per turn, during the Battle Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon using this card you control.
   de:
   es:
   fr:
@@ -55,7 +55,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1034231
