--- a/data/cards/82570174.yaml
+++ b/data/cards/82570174.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>昇<rt>しょう</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>バイデント・ドラギオン
-  ja_romaji: Sangenshōryū Baidento Doragion
+  ja_romaji: Sangen Shōryū Baidento Doragion
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dragon Tuner + 1+ non-Tuner Dragon monsters
-    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Dragon monsters. You can only use this effect of "Sangenpai Bident Dragion" once per turn. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Sangenpai Bident Dragion" once per Duel.
+    If this card is Synchro Summoned: You can target 1 FIRE Dragon monster in your GY; Special Summon it, also you cannot Special Summon for the rest of this turn, except Dragon monsters. If 3 or more attacks have been declared this turn (Quick Effect): You can Special Summon this card from your GY, then you can destroy 1 Spell/Trap on the field. You can only use this effect of "Sangenpai Bident Dragion" once per Duel, and its previous effect only once per turn.
   de:
   es:
   fr:
@@ -58,7 +58,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1034233
