--- a/data/cards/yugipedia1052843.yaml
+++ b/data/cards/yugipedia1052843.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can discard this card; Special Summon 1 Insect, Plant, or Reptile monster from your hand. If this card is banished from the hand or GY: You can activate this effect; during the End Phase of this turn, draw cards equal to the number of Insect, Plant, and Reptile monsters you control with different Types. You can only use each effect of "Raika no Himejanome" once per turn.
+    You can discard this card; Special Summon 1 Insect, Plant, or Reptile monster from your hand. If this card is banished from the hand or GY: You can activate this effect; during the End Phase of this turn, draw cards equal to the number of different Monster Types among the monsters you control that are Insect, Plant, or Reptile. You can only use each effect of "Raika no Himejanome" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ level: 4
 atk: 1800
 def: 0
 series:
-- Raika
+- Ragnaraika
 images:
 - index: 1
   image: RaikanoHimejanome-INFO-JP-OP.png
