--- a/data/rush/19798.yaml
+++ b/data/rush/19798.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 LIGHT Attribute Spellcaster Type monster on your field equipped with an Equip Spell Card can attack directly this turn. Then, if it is Level 7 or higher, it gains 1000 ATK until the end of this turn.
+    1 LIGHT Attribute Spellcaster Type monster on your field equipped with an Equip Spell Card can attack directly this turn. Then, if that monster is Level 7 or higher, it gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
