--- a/rush.yaml
+++ b/rush.yaml
@@ -41786,7 +41786,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up monster on your opponent's field. This turn, while that monster is face-up, your opponent cannot Tribute that monster for a Tribute Summon.
+    Choose 1 face-up monster on your opponent's field. This turn, while that monster is face-up, your opponent cannot Tribute it for a Tribute Summon.
   de:
   es:
   fr:
@@ -62540,7 +62540,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 300 ATK until the end of this turn. Then, you can make it become Insect Type until the end of this turn.
+    1 face-up monster on your opponent's field loses 300 ATK until the end of this turn. Then, you can make that monster become Insect Type until the end of this turn.
   de:
   es:
   fr:
@@ -87579,7 +87579,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 5 or higher Machine Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, if it is LIGHT Attribute, draw 1 card.
+    1 face-up Level 5 or higher Machine Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, if that monster is LIGHT Attribute, draw 1 card.
   de:
   es:
   fr:
@@ -121499,7 +121499,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Also, it gains additional 500 ATK, if you have 5 or more Spell Cards in your Graveyard.
+    This card gains ATK equal to [the number of Spell Cards in your Graveyard] x 100. Then, it gains additional 500 ATK, if you have 5 or more Spell Cards in your Graveyard.
   de:
   es:
   fr:
@@ -129407,7 +129407,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 LIGHT Attribute Spellcaster Type monster on your field equipped with an Equip Spell Card can attack directly this turn. Then, if it is Level 7 or higher, it gains 1000 ATK until the end of this turn.
+    1 LIGHT Attribute Spellcaster Type monster on your field equipped with an Equip Spell Card can attack directly this turn. Then, if that monster is Level 7 or higher, it gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
