--- a/data/cards/28279365.yaml
+++ b/data/cards/28279365.yaml
@@ -38,6 +38,10 @@ sets:
     set_name: Legacy of Destruction
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   zh-CN:
   - set_number: LEDE-SC068
     set_name: Legacy of Destruction
