--- a/data/cards/33854624.yaml
+++ b/data/cards/33854624.yaml
@@ -96,6 +96,11 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DABL-KR006
     set_name: Darkwing Blast
