--- a/data/cards/44362883.yaml
+++ b/data/cards/44362883.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Super Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SD43-KR021
     set_name: 'Structure Deck: Alba Strike'
