--- a/data/cards/45883110.yaml
+++ b/data/cards/45883110.yaml
@@ -96,6 +96,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR011
     set_name: Cyberstorm Access
