--- a/data/cards/56787189.yaml
+++ b/data/cards/56787189.yaml
@@ -96,6 +96,11 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR054
     set_name: Cyberstorm Access
