--- a/data/cards/65589010.yaml
+++ b/data/cards/65589010.yaml
@@ -104,6 +104,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: ROTD-KR051
     set_name: Rise of the Duelist
