--- a/data/cards/10604644.yaml
+++ b/data/cards/10604644.yaml
@@ -127,6 +127,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DIFO-KR007
     set_name: Dimension Force
