--- a/data/cards/11132674.yaml
+++ b/data/cards/11132674.yaml
@@ -93,6 +93,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PHHY-KR045
     set_name: Photon Hypernova
