--- a/data/cards/22073844.yaml
+++ b/data/cards/22073844.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: ROTD-KR010
     set_name: Rise of the Duelist
