--- a/data/cards/24915933.yaml
+++ b/data/cards/24915933.yaml
@@ -100,6 +100,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PHHY-KR033
     set_name: Photon Hypernova
