--- a/data/cards/27572350.yaml
+++ b/data/cards/27572350.yaml
@@ -94,6 +94,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR041
     set_name: Cyberstorm Access
