--- a/data/cards/38811586.yaml
+++ b/data/cards/38811586.yaml
@@ -95,6 +95,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR035
     set_name: Cyberstorm Access
