--- a/data/cards/41373230.yaml
+++ b/data/cards/41373230.yaml
@@ -139,6 +139,10 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: ROTD-KR038
     set_name: Rise of the Duelist
