--- a/data/cards/41436536.yaml
+++ b/data/cards/41436536.yaml
@@ -42,7 +42,7 @@ text:
     「元素－英雄 羽毛人」＋「元素－英雄 爆炎女郎」
     此怪獸僅限以融合召喚進行特殊召喚。此卡不會因戰鬥被破壞。
   zh-CN: |-
-    “元素－英雄 羽毛人”＋“元素－英雄 爆炎女郎”
+    "元素－英雄 羽毛人"＋"元素－英雄 爆炎女郎"
     此卡仅可以融合召唤方式特殊召唤。①：此卡不会因战斗被破坏。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
