--- a/data/cards/53971455.yaml
+++ b/data/cards/53971455.yaml
@@ -101,6 +101,11 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CYAC-KR042
     set_name: Cyberstorm Access
