--- a/data/cards/68468459.yaml
+++ b/data/cards/68468459.yaml
@@ -204,6 +204,10 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: ROTD-KR011
     set_name: Rise of the Duelist
