--- a/data/cards/69680031.yaml
+++ b/data/cards/69680031.yaml
@@ -129,6 +129,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR008
     set_name: Rise of the Duelist
