--- a/data/cards/70534340.yaml
+++ b/data/cards/70534340.yaml
@@ -87,6 +87,11 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Ultra Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SD43-KR042
     set_name: 'Structure Deck: Alba Strike'
