--- a/data/cards/95679145.yaml
+++ b/data/cards/95679145.yaml
@@ -96,6 +96,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR009
     set_name: Rise of the Duelist
