--- a/data/cards/96891787.yaml
+++ b/data/cards/96891787.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Common
+  - set_number: CF01-JP???
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: ROTD-KR006
     set_name: Rise of the Duelist
