--- a/rush.yaml
+++ b/rush.yaml
@@ -71655,7 +71655,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Effect Monster from your hand face-up to your field. If you sent an Effect Monster whose original Level is 7 or higher to the Graveyard to meet the requirement, it can make up to 2 attacks on monsters during this turn.
+    Special Summon 1 Effect Monster from your hand face-up to your field. If you sent an Effect Monster whose original Level is 7 or higher to the Graveyard to meet the requirement, the monster Special Summoned by this effect can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -112055,7 +112055,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or higher Pyro Type monster from your hand face-up to your field. Then, if you have "Super Assistant Achi" in your Graveyard, it gains 800 ATK until the end of this turn.
+    Special Summon 1 Level 7 or higher Pyro Type monster from your hand face-up to your field. Then, if you have "Super Assistant Achi" in your Graveyard, the monster Special Summoned by this effect gains 800 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -114212,7 +114212,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if it was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
+    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if you took "Jointech Hero" by this effect, you can add 1 "Jointech Ace" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -118377,7 +118377,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and they can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
   de:
   es:
   fr:
@@ -118917,7 +118917,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 500 ATK until the end of this turn, if it was "Twin Edge Dragon".
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, if that is "Twin Edge Dragon", it gains additional 500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -127268,7 +127268,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if it was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
+    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if you added "Blue-Eyes Bright Dragon" by this effect, you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -134688,7 +134688,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if they attack a Defense Position monster this turn. Then, if it was "Transamu Rainac", you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
+    Send the top card of your Deck to the Graveyard. If you sent a LIGHT Attribute Galaxy Type monster to the Graveyard by this effect, you can choose up to 3 face-up monsters on your field. If you do, those monsters inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference) if they attack a Defense Position monster this turn. Then, if you chose "Transamu Rainac" by this effect, you can change all Attack Position monsters on your opponent's field to face-up Defense Position.
   de:
   es:
   fr:
