--- a/data/cards/59650656.yaml
+++ b/data/cards/59650656.yaml
@@ -33,12 +33,13 @@ text:
   zh-TW: |-
     ①：可在我方場上的「銀河」超量怪獸因對方怪獸的攻擊或對方的效果被破壞送至墓地時發動。將對方場上的正面表示的所有卡全部破壞除外。②：在此卡存在於墓地的狀況下，可在我方抽牌階段將墓地的此卡除外替代通常抽牌，將我方墓地的１隻「銀河」超量怪獸做為對象發動。特殊召喚該怪獸。
   zh-CN: |-
-    ①：自己场上的"银河"超量怪兽因对手怪兽的攻击或对手的效果被破坏并被送至墓地时可以发动。将对手场上的表侧表示的卡全部破坏并除外。②：此卡存在于墓地的情况下，在自己的抽牌阶段，作为通常抽牌的代替，将墓地的此卡除外，以自己墓地的1只"银河"超量怪兽为对象可以发动。将该怪兽特殊召唤。
+    ①：自己场上的“银河”超量怪兽因对手怪兽的攻击或对手的效果被破坏并被送至墓地时可以发动。将对手场上的表侧表示的卡全部破坏并除外。②：此卡存在于墓地的情况下，在自己的抽牌阶段，作为通常抽牌的代替，将墓地的此卡除外，以自己墓地的1只“银河”超量怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Trap
 property: Normal
 series:
 - Chaos
 - Hole
+- Tachyon
 images:
 - index: 1
   image: TachyonChaosHole-MP15-EN-SR-1E.png
