--- a/data/cards/68396121.yaml
+++ b/data/cards/68396121.yaml
@@ -70,6 +70,7 @@ series:
 - Galaxy-Eyes
 - Galaxy-Eyes Tachyon Dragon
 - Chaos
+- Tachyon
 images:
 - index: 1
   image: NumberC107NeoGalaxyEyesTachyonDragon-MAGO-EN-R-1E.png
@@ -160,6 +161,9 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DP29-JP012
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
   ko:
   - set_number: PRIO-KR041
     set_name: Primal Origin
