--- a/data/cards/88774734.yaml
+++ b/data/cards/88774734.yaml
@@ -94,6 +94,9 @@ sets:
     set_name: Chaos Impact
     rarities:
     - Common
+  - set_number: DP29-JP010
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
   ko:
   - set_number: CHIM-KR016
     set_name: Chaos Impact
