--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -5218,6 +5218,18 @@ Burning Abyss:
   ko_rr: Pian
   zh-TW:
   zh-CN: 彼岸
+Tachyon:
+  de: Tachyonen
+  es: Taquiónico
+  fr: Tachyon
+  it: Tachionic
+  pt: Táquion
+  ja: タキオン
+  ja_romaji: Takion
+  ko: 타키온
+  ko_rr: Takion
+  zh-TW:
+  zh-CN:
 Edge Imp:
   de: enkobold
   es: Diablillo de
