--- a/data/cards/15381421.yaml
+++ b/data/cards/15381421.yaml
@@ -126,6 +126,9 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: DP29-JP008
+    set_name: 'Duelist Pack: Duelists of Brilliance'
+    rarities:
   ko:
   - set_number: CHIM-KR014
     set_name: Chaos Impact
