--- a/data/cards/47172959.yaml
+++ b/data/cards/47172959.yaml
@@ -96,6 +96,7 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Quarter Century Secret Rare
+    - Holographic Rare
   - set_number: PHNI-JP038
     set_name: Phantom Nightmare +1 Bonus Pack
     rarities:
