--- a/data/cards/51043053.yaml
+++ b/data/cards/51043053.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Enquanto seu oponente tiver 4 ou menos cards na mão dele e este card for o único monstro que você controla, seu oponente não pode declarar um ataque. Uma vez por turno, se você controlar um monstro do Tipo Dragão de Nível 8: você pode fazer com que este card se torne de Nível 8 até o final deste turno.
   ja: |-
-    相手の手札が４枚以下で自分フィールド上のモンスターがこのカードのみの場合、相手は攻撃宣言する事ができない。また、１ターンに１度、自分フィールド上にドラゴン族・レベル８モンスターが存在する場合に発動できる。このカードのレベルをエンドフェイズ時まで８にする。
+    相手の手札が４枚以下で自分フィールド上のモンスターがこのカードのみの場合、相手は攻撃宣言をする事ができない。また、１ターンに１度、自分フィールド上にドラゴン族・レベル８モンスターが存在する場合に発動できる。このカードのレベルをエンドフェイズ時まで８にする。
   ko: |-
     상대의 패가 4장 이하이고 자신 필드 위의 몬스터가 이 카드뿐일 경우, 상대는 공격 선언을 할 수 없다. 또한, 1턴에 1번, 자신 필드 위에 드래곤족 / 레벨 8 몬스터가 존재할 경우에 발동할 수 있다. 이 카드의 레벨을 엔드 페이즈시까지 8로 한다.
   zh-TW: |-
