--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5230,6 +5230,18 @@
   ko_rr: Pian
   zh-TW:
   zh-CN: 彼岸
+- en: Tachyon
+  de: Tachyonen
+  es: Taquiónico
+  fr: Tachyon
+  it: Tachionic
+  pt: Táquion
+  ja: タキオン
+  ja_romaji: Takion
+  ko: 타키온
+  ko_rr: Takion
+  zh-TW:
+  zh-CN:
 - en: Edge Imp
   de: enkobold
   es: Diablillo de
